# szgmu-schedule-bot

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml  unit-tests.yml
migrations/: env.py
migrations/versions/: 136cb8b0581d_feat_init_schema.py  bc4a02a6ea13_feat_init_schema.py
src/: main.py
src/api/: base_client.py  client.py  exceptions.py
src/bot/dialogs/: __init__.py
src/bot/dialogs/admin/: callbacks.py  dialog.py  states.py
src/bot/dialogs/group_selection/: callbacks.py  dialog.py  states.py
src/bot/dialogs/main_menu/: dialog.py  getters.py  states.py
src/bot/dialogs/onboarding/: dialog.py  states.py
src/bot/dialogs/schedule/: callbacks.py  dialog.py  getters.py  states.py
src/bot/dialogs/settings/: callbacks.py  dialog.py  getters.py  states.py
src/bot/handlers/: user.py
src/core/: academic_calendar.py  config.py  lesson_type_mapper.py  schedule_parser.py  speciality_parser.py
src/di/: container.py
src/di/providers/: api_client.py  config.py  database.py  repositories.py  services.py
src/models/: __init__.py  enums.py  group.py  lesson.py  speciality.py  student_group.py  subgroup.py  user.py
src/repositories/: group_repo.py  lesson_repo.py  speciality_repo.py  subgroup_repo.py  user_repo.py
src/services/: exceptions.py  group_selection_service.py  schedule_service.py  settings_service.py  sync_service.py  user_service.py
tests/integration/: conftest.py
tests/test_bot/: test_academic_calendar.py
tests/unit/: conftest.py  test_main.py
tests/unit/api/: test_api_base_client.py  test_api_client.py  test_api_exceptions.py  test_api_schemas.py
tests/unit/core/: test_academic_calendar.py  test_config.py  test_lesson_type_mapper.py  test_schedule_parser.py  test_speciality_parser.py
tests/unit/di/: test_di_container.py
tests/unit/models/: test_models.py
tests/unit/services/: test_group_selection_service.py  test_schedule_service.py  test_service_exceptions.py  test_settings_service.py  test_sync_service.py  test_user_service.py
