[project]
name = "szgmu-schedule-bot"
version = "0.1.0"
description = "Telegram bot for providing university class schedules"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.23.0",
    "aiogram-dialog>=2.4.0",
    "aiohttp>=3.13.2",
    "alembic>=1.17.2",
    "dishka>=1.7.2",
    "psycopg[binary]>=3.3.2",
    "pydantic-settings>=2.12.0",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.45",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.5.1",
]
lint = [
    "mypy>=1.19.1",
    "ruff>=0.14.10",
]
test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]

[tool.ruff]
line-length = 100

include = [
    "src/**.py",
    "tests/**.py",
]

[tool.ruff.lint]
select = [
    "ALL"
]
ignore = [
    "ANN",
    "BLE001",
    "COM812",
    "D",
    "DTZ011",
    "EM101","EM102",
    "FBT001", "FBT002",
    "PLR0913",
    "PT001", "PT023",
    "RET505",
    "SIM108",
    "RUF001",
    "TRY003", "TRY300", "TRY400",
    "TC001", "TC002", "TC003", "TC006",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "TID252",
    "PLR2004",
    "S101",
    "TRY003",
    "PLW1641",
    "PYI059"
]

[tool.ruff.lint.isort]
no-lines-before = ["local-folder"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.mypy]
mypy_path = ["src"]
packages = ["api", "bot", "core", "di", "models", "repositories", "services"]
plugins = ["pydantic.mypy"]
explicit_package_bases = true
strict = true
strict_bytes = true
local_partial_types = true
no_implicit_optional = true
warn_unused_ignores = true
show_error_codes = true
exclude = ['venv', '.venv']

[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = ["func-returns-value"]

[tool.pytest.ini_options]
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
]
asyncio_mode = "auto"